// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule prefer-button default config smoketest 1`] = `
Array [
  Object {
    "errorCount": 4,
    "filePath": "test-files/rules/prefer-button.html",
    "messages": Array [
      Object {
        "column": 14,
        "context": Object {
          "type": "button",
        },
        "line": 5,
        "message": "Prefer to use <button> instead of <input type=\\"button\\"> when adding buttons",
        "offset": 64,
        "ruleId": "prefer-button",
        "ruleUrl": "https://html-validate.org/rules/prefer-button.html",
        "selector": "input:nth-child(4)",
        "severity": 2,
        "size": 6,
      },
      Object {
        "column": 14,
        "context": Object {
          "type": "submit",
        },
        "line": 8,
        "message": "Prefer to use <button> instead of <input type=\\"submit\\"> when adding buttons",
        "offset": 119,
        "ruleId": "prefer-button",
        "ruleUrl": "https://html-validate.org/rules/prefer-button.html",
        "selector": "input:nth-child(6)",
        "severity": 2,
        "size": 6,
      },
      Object {
        "column": 14,
        "context": Object {
          "type": "reset",
        },
        "line": 11,
        "message": "Prefer to use <button> instead of <input type=\\"reset\\"> when adding buttons",
        "offset": 174,
        "ruleId": "prefer-button",
        "ruleUrl": "https://html-validate.org/rules/prefer-button.html",
        "selector": "input:nth-child(8)",
        "severity": 2,
        "size": 5,
      },
      Object {
        "column": 14,
        "context": Object {
          "type": "image",
        },
        "line": 14,
        "message": "Prefer to use <button> instead of <input type=\\"image\\"> when adding buttons",
        "offset": 227,
        "ruleId": "prefer-button",
        "ruleUrl": "https://html-validate.org/rules/prefer-button.html",
        "selector": "input:nth-child(10)",
        "severity": 2,
        "size": 5,
      },
    ],
    "source": "<input>
<input type=\\"text\\">
<input type=\\"hidden\\">

<input type=\\"button\\">
<button type=\\"button\\"></button>

<input type=\\"submit\\">
<button type=\\"submit\\"></button>

<input type=\\"reset\\">
<button type=\\"reset\\"></button>

<input type=\\"image\\">
<button type=\\"submit\\"></button>
",
    "warningCount": 0,
  },
]
`;

exports[`rule prefer-button should contain contextual documentation for type "button" 1`] = `
Object {
  "description": "Prefer to use \`<button type=\\"button\\">\` instead of \`\\"<input type=\\"button\\">\`.",
  "url": "https://html-validate.org/rules/prefer-button.html",
}
`;

exports[`rule prefer-button should contain contextual documentation for type "image" 1`] = `
Object {
  "description": "Prefer to use \`<button type=\\"button\\">\` instead of \`\\"<input type=\\"image\\">\`.",
  "url": "https://html-validate.org/rules/prefer-button.html",
}
`;

exports[`rule prefer-button should contain contextual documentation for type "reset" 1`] = `
Object {
  "description": "Prefer to use \`<button type=\\"reset\\">\` instead of \`\\"<input type=\\"reset\\">\`.",
  "url": "https://html-validate.org/rules/prefer-button.html",
}
`;

exports[`rule prefer-button should contain contextual documentation for type "submit" 1`] = `
Object {
  "description": "Prefer to use \`<button type=\\"submit\\">\` instead of \`\\"<input type=\\"submit\\">\`.",
  "url": "https://html-validate.org/rules/prefer-button.html",
}
`;

exports[`rule prefer-button should contain contextual documentation for type "unknown" 1`] = `
Object {
  "description": "Prefer to use \`<button>\` instead of \`\\"<input type=\\"unknown\\">\`.",
  "url": "https://html-validate.org/rules/prefer-button.html",
}
`;

exports[`rule prefer-button should contain documentation 1`] = `
Object {
  "description": "Prefer to use the generic \`<button>\` element instead of \`<input>\`.",
  "url": "https://html-validate.org/rules/prefer-button.html",
}
`;
